# photo-sorter

./: .gitignore  LICENSE  README.md  calibration_report.html  pyproject.toml  requirements.txt
photo_sorter/: __main__.py  classifier.py  cli.py  copier.py  scanner.py  state.py
tests/: test_classifier.py
